- Make sure docproperties gets updated when updating an agendaitem list or a protocol. [phgross]
- Fix order issue when deleting a favorite.  [phgross]
- Add document tooltip to inbox document listing. [njohner]
- Add a template tab for OneOffixx. [Rotonen]
- Fix logo upload in the theme control-panel. [phgross]
- Solr TabbedView filters: Also include non-wildcarded terms in query. [lgraf]
- Add an unrestricted search option to get_subdossiers(). [Rotonen]
- Better label the Oneoffixx template selection dropdown default value. [Rotonen]
- Notifications: Defer sending mails until end of transaction. [lgraf]
- Make the Oneoffixx timeout configurable via the registry. [Rotonen]
- Update change-date properly if meeting documents have been updated. [elioschmutz]
- Update unmatching label for modification dates for meeting documents. [elioschmutz]
- Fix broken .xls mimetypes-registry entry. [elioschmutz]
- Implement WebActions storage and REST API. [lgraf]
- Fix changing task to or from private via edit form. [deiferni]
- Fix creating private tasks by mistake. [deiferni]
- Add simple cache invalidation mechanism for javascript included in templates. [deiferni]
- Fix handling of initial version when saving a document as PDF. [njohner]
- Include agenda item description in TOC json. [deiferni]
- Fix bug in paragraph agendaitem item_number display. [njohner]
- Group fields in Committee edit forms. [njohner]
- Scrub Bobo Call Interface data out of the HTTP response headers. [Rotonen]
- Scrub the server version out of the HTTP response headers. [Rotonen]
- Fix bug in excerpt overview when user has no permissions on meeting. [njohner]
- Avoid naming conflicts in meeting zipexport. [njohner]
- Fix bug in meeting zip export with documents without files. [njohner]
- Do not show closed dossiers in the move target autocomplete widget. [Rotonen]
- Copy local roles depending on assignment cause during copy/paste. [njohner]